# rust_os

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
